--- a/Aiml.ipynb
+++ b/Aiml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/km0mwqBs++LmKNw9x8g0",
+      "authorship_tag": "ABX9TyOnhZTz+Z+ka+CRbP7jiDUB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2798,14 +2798,295 @@
         "Model -> makes the pattern/rules by learning the data.\n",
         "Training -> Its a process of making model.\n",
         "Testing\n",
-        "Prediction\n",
-        ""
+        "Prediction\n"
       ],
       "metadata": {
         "id": "MgaleUX3Ma83"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Handling missing values\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "data = {\n",
+        "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
+        "    'Age': [25, None, 35, 28, 30],\n",
+        "    'Salary': [50000, 60000, None, 55000, None]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(data)\n",
+        "print(df)\n",
+        "\n",
+        "\"\"\"\n",
+        "print(df.isnull().sum())\n",
+        "print(df.dropna())\n",
+        "\n",
+        "\n",
+        "df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+        "df['Salary'].fillna(df['Salary'].mean(), inplace=True)\n",
+        "print(df)\n",
+        "\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 157
+        },
+        "id": "1BZfAVN5zUz8",
+        "outputId": "9dfb8f49-d929-48ec-c2f5-4ea0ce62ddd8"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      Name   Age   Salary\n",
+            "0    Alice  25.0  50000.0\n",
+            "1      Bob   NaN  60000.0\n",
+            "2  Charlie  35.0      NaN\n",
+            "3    David  28.0  55000.0\n",
+            "4      Eve  30.0      NaN\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"\\nprint(df.isnull().sum())\\nprint(df.dropna())\\n\\n\\ndf['Age'].fillna(df['Age'].mean(), inplace=True)\\ndf['Salary'].fillna(df['Salary'].mean(), inplace=True)\\nprint(df)\\n\\n\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Encoding\n",
+        "# Label encode -> Encodes withe binary number 0/1\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.read_csv(\"/content/student_results_with_city.csv\")\n",
+        "\n",
+        "df_label = df.copy()\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "df_label['Gender_encoded'] = le.fit_transform(df_label['Gender'])\n",
+        "df_label['Passed_encoded'] = le.fit_transform(df_label['Passed'])\n",
+        "\n",
+        "\"\"\"\n",
+        "print('\\n Label encoded data ')\n",
+        "print(df_label[['Name', 'Gender', 'Gender_encoded', 'Passed', 'Passed_encoded']])\n",
+        "\"\"\"\n",
+        "\n",
+        "df_encoded = pd.get_dummies(df, columns=['City'])\n",
+        "print('\\n One hot encoded data (City)')\n",
+        "print(df_encoded)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cZG4kC2GCahD",
+        "outputId": "829a5d31-4ffd-4d18-ea62-7aff790e6939"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " One hot encoded data (City)\n",
+            "      Name  Gender Passed  City_Ahmedabad  City_Bangalore  City_Bhopal  \\\n",
+            "0     Aman    Male    Yes           False           False        False   \n",
+            "1    Priya  Female    Yes           False           False        False   \n",
+            "2    Rahul    Male     No           False            True        False   \n",
+            "3   Anjali  Female    Yes           False           False        False   \n",
+            "4     Ravi    Male    Yes           False           False        False   \n",
+            "5    Meera  Female     No           False           False        False   \n",
+            "6    Arjun    Male    Yes           False           False        False   \n",
+            "7     Neha  Female    Yes            True           False        False   \n",
+            "8    Imran    Male     No           False           False        False   \n",
+            "9    Sneha  Female    Yes           False           False        False   \n",
+            "10     Raj    Male    Yes           False           False        False   \n",
+            "11   Divya  Female     No           False           False        False   \n",
+            "12   Kabir    Male    Yes           False           False        False   \n",
+            "13  Simran  Female     No           False           False        False   \n",
+            "14   Karan    Male     No           False           False         True   \n",
+            "15   Pooja  Female    Yes           False           False        False   \n",
+            "16  Rakesh    Male    Yes           False           False        False   \n",
+            "17    Isha  Female     No           False           False        False   \n",
+            "18   Rohit    Male    Yes           False           False        False   \n",
+            "19   Deepa  Female    Yes           False           False        False   \n",
+            "\n",
+            "    City_Chandigarh  City_Chennai  City_Delhi  City_Gurgaon  ...  \\\n",
+            "0             False         False        True         False  ...   \n",
+            "1             False         False       False         False  ...   \n",
+            "2             False         False       False         False  ...   \n",
+            "3             False          True       False         False  ...   \n",
+            "4             False         False       False         False  ...   \n",
+            "5             False         False       False         False  ...   \n",
+            "6             False         False       False         False  ...   \n",
+            "7             False         False       False         False  ...   \n",
+            "8             False         False       False         False  ...   \n",
+            "9             False         False       False         False  ...   \n",
+            "10             True         False       False         False  ...   \n",
+            "11            False         False       False         False  ...   \n",
+            "12            False         False       False         False  ...   \n",
+            "13            False         False       False         False  ...   \n",
+            "14            False         False       False         False  ...   \n",
+            "15            False         False       False         False  ...   \n",
+            "16            False         False       False         False  ...   \n",
+            "17            False         False       False          True  ...   \n",
+            "18            False         False       False         False  ...   \n",
+            "19            False         False       False         False  ...   \n",
+            "\n",
+            "    City_Kolkata  City_Lucknow  City_Mumbai  City_Mysore  City_Nagpur  \\\n",
+            "0          False         False        False        False        False   \n",
+            "1          False         False         True        False        False   \n",
+            "2          False         False        False        False        False   \n",
+            "3          False         False        False        False        False   \n",
+            "4          False         False        False        False        False   \n",
+            "5          False         False        False        False        False   \n",
+            "6           True         False        False        False        False   \n",
+            "7          False         False        False        False        False   \n",
+            "8          False         False        False        False        False   \n",
+            "9          False          True        False        False        False   \n",
+            "10         False         False        False        False        False   \n",
+            "11         False         False        False        False        False   \n",
+            "12         False         False        False        False        False   \n",
+            "13         False         False        False        False         True   \n",
+            "14         False         False        False        False        False   \n",
+            "15         False         False        False        False        False   \n",
+            "16         False         False        False        False        False   \n",
+            "17         False         False        False        False        False   \n",
+            "18         False         False        False        False        False   \n",
+            "19         False         False        False         True        False   \n",
+            "\n",
+            "    City_Noida  City_Patna  City_Pune  City_Surat  City_Thane  \n",
+            "0        False       False      False       False       False  \n",
+            "1        False       False      False       False       False  \n",
+            "2        False       False      False       False       False  \n",
+            "3        False       False      False       False       False  \n",
+            "4        False       False      False       False       False  \n",
+            "5        False       False       True       False       False  \n",
+            "6        False       False      False       False       False  \n",
+            "7        False       False      False       False       False  \n",
+            "8        False       False      False       False       False  \n",
+            "9        False       False      False       False       False  \n",
+            "10       False       False      False       False       False  \n",
+            "11       False       False      False       False       False  \n",
+            "12       False       False      False        True       False  \n",
+            "13       False       False      False       False       False  \n",
+            "14       False       False      False       False       False  \n",
+            "15       False        True      False       False       False  \n",
+            "16        True       False      False       False       False  \n",
+            "17       False       False      False       False       False  \n",
+            "18       False       False      False       False        True  \n",
+            "19       False       False      False       False       False  \n",
+            "\n",
+            "[20 rows x 23 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Scaling\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import pandas as pd\n",
+        "\n",
+        "data = {\n",
+        "    'StudyHours': [1,2,3,4,5],\n",
+        "    'TestScores': [40,50,60,70,80]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(data)\n",
+        "\n",
+        "standard_scaler = StandardScaler()\n",
+        "standard_scaled = standard_scaler.fit_transform(df)\n",
+        "\n",
+        "print('Standard Scaled data')\n",
+        "print(pd.DataFrame(standard_scaled, columns=['StudyHours', 'TestScores']))\n",
+        "\n",
+        "minmax_scaler = MinMaxScaler()\n",
+        "minmax_scaled = minmax_scaler.fit_transform(df)\n",
+        "\n",
+        "print('\\n MinMax Scaled data')\n",
+        "print(pd.DataFrame(minmax_scaled, columns=['StudyHours', 'TestScores']))\n",
+        "\n",
+        "# train, split & test\n",
+        "\n",
+        "X = df[['StudyHours']]\n",
+        "y = df[['TestScores']]\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "print('\\n X_train')\n",
+        "print(X_train)\n",
+        "\n",
+        "print('\\n X_test')\n",
+        "print(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dgrBtkQFIDC6",
+        "outputId": "77619735-6e5c-4ddf-ed07-61f2c1d23117"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Standard Scaled data\n",
+            "   StudyHours  TestScores\n",
+            "0   -1.414214   -1.414214\n",
+            "1   -0.707107   -0.707107\n",
+            "2    0.000000    0.000000\n",
+            "3    0.707107    0.707107\n",
+            "4    1.414214    1.414214\n",
+            "\n",
+            " MinMax Scaled data\n",
+            "   StudyHours  TestScores\n",
+            "0        0.00        0.00\n",
+            "1        0.25        0.25\n",
+            "2        0.50        0.50\n",
+            "3        0.75        0.75\n",
+            "4        1.00        1.00\n",
+            "\n",
+            " X_train\n",
+            "   StudyHours\n",
+            "4           5\n",
+            "2           3\n",
+            "0           1\n",
+            "3           4\n",
+            "\n",
+            " X_test\n",
+            "   StudyHours\n",
+            "1           2\n"
+          ]
+        }
+      ]
     }
   ]
 }
