--- a/Aiml.ipynb
+++ b/Aiml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnhZTz+Z+ka+CRbP7jiDUB",
+      "authorship_tag": "ABX9TyN7h8jK2Toqbdw8PCOs8kcN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2841,7 +2841,7 @@
         "id": "1BZfAVN5zUz8",
         "outputId": "9dfb8f49-d929-48ec-c2f5-4ea0ce62ddd8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2903,7 +2903,7 @@
         "id": "cZG4kC2GCahD",
         "outputId": "829a5d31-4ffd-4d18-ea62-7aff790e6939"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3052,7 +3052,7 @@
         "id": "dgrBtkQFIDC6",
         "outputId": "77619735-6e5c-4ddf-ed07-61f2c1d23117"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3084,6 +3084,422 @@
             " X_test\n",
             "   StudyHours\n",
             "1           2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Supervised machine learning**"
+      ],
+      "metadata": {
+        "id": "evsU2DHZbc4x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Trained using example data and make to predict the output for the new data\n",
+        "\n",
+        "'''\n",
+        "Machine learning models\n",
+        "\n",
+        "Regression\n",
+        "\n",
+        "1) Linear regression :\n",
+        "  -> finds a pattern in old data\n",
+        "  -> straight line\n",
+        "  -> from the line it will return the output\n",
+        "\n",
+        "Lets demonstrate with an example\n",
+        "\n",
+        "In regression the output is integer and its fixed.\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "X = [[1], [2], [3], [4], [5], [6], [7]]\n",
+        "y = [30,40,50,55,60,65,70]\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "model.fit(X, y) # training the data\n",
+        "\n",
+        "hours = int(input(\"Enter how many hours do you study: \"))\n",
+        "\n",
+        "predicted_score = model.predict([[hours]])\n",
+        "print(f'Based on the input hours :{hours} you may score :{predicted_score}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wh4zQVgvbhiI",
+        "outputId": "19948a9f-8c40-4921-c492-a54b50b34b35"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter how many hours do you study: 9\n",
+            "Based on the input hours :9 you may score :[85.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Classification : The out is fixed/ categorical ( yes/ no )\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "Logistic regression : o/p [0,1]\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "X = [[1], [2], [3], [4], [5], [6], [7]]\n",
+        "y = [0,0,0,0,1,1,1]\n",
+        "\n",
+        "model = LogisticRegression()\n",
+        "model.fit(X, y) # training the data\n",
+        "\n",
+        "hours = float(input(\"Enter how many hours do you study: \"))\n",
+        "\n",
+        "predicted_score = model.predict([[hours]])[0]\n",
+        "\n",
+        "if predicted_score == 1:\n",
+        "  print(f'Based on the input hours :{hours} you may pass the exam')\n",
+        "else:\n",
+        "  print(f'Based on the input hours :{hours} you may fail the exam')\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9co0uVO3iqTp",
+        "outputId": "6e5107cd-f704-4bed-bdff-85a6112387f5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter how many hours do you study: 9\n",
+            "Based on the input hours :9.0 you may pass the exam\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "\n",
+        "KNN : K nearest neighbour\n",
+        "based on the k nearest neighbour it will predict the value of the new input\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "X = [\n",
+        "    [180, 7],\n",
+        "    [190, 7.5],\n",
+        "    [200, 8],\n",
+        "    [210, 8.5],\n",
+        "    [220, 9],\n",
+        "    [230, 9.5],\n",
+        "    [240, 10]\n",
+        "]\n",
+        "\n",
+        "y = [0,0,1,0,1,1,0]\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=3)\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "weight = float(input(\"Enter your weight: \"))\n",
+        "height = float(input(\"Enter your height: \"))\n",
+        "\n",
+        "predicted_score = model.predict([[weight, height]])[0]\n",
+        "\n",
+        "if predicted_score == 1:\n",
+        "  print('This is likely an apple')\n",
+        "else:\n",
+        "  print('This is likely an orange')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RnrZjEjNkHXN",
+        "outputId": "2c23284c-c538-4840-c22d-ba3441acecaf"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your weight: 9.25\n",
+            "Enter your height: 215\n",
+            "This is likely an orrange\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "'''\n",
+        "\n",
+        "KNN : K nearest neighbour\n",
+        "based on the k nearest neighbour it will predict the value of the new input\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "X = [\n",
+        "    [180, 7],\n",
+        "    [190, 7.5],\n",
+        "    [200, 8],\n",
+        "    [210, 8.5],\n",
+        "    [220, 9],\n",
+        "    [230, 9.5],\n",
+        "    [240, 10]\n",
+        "]\n",
+        "\n",
+        "y = [0,0,1,0,1,1,0]\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=3)\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "weight = float(input(\"Enter your weight: \"))\n",
+        "height = float(input(\"Enter your height: \"))\n",
+        "\n",
+        "predicted_score = model.predict([[weight, height]])[0]\n",
+        "\n",
+        "if predicted_score == 1:\n",
+        "  print('This is likely an apple')\n",
+        "else:\n",
+        "  print('This is likely an orange')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c23284c-c538-4840-c22d-ba3441acecaf",
+        "id": "OVCPMYvrnzlq"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your weight: 9.25\n",
+            "Enter your height: 215\n",
+            "This is likely an orrange\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "\n",
+        "KNN : K nearest neighbour\n",
+        "based on the k nearest neighbour it will predict the value of the new input\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "X = [\n",
+        "    [180, 7],\n",
+        "    [190, 7.5],\n",
+        "    [200, 8],\n",
+        "    [210, 8.5],\n",
+        "    [220, 9],\n",
+        "    [230, 9.5],\n",
+        "    [240, 10]\n",
+        "]\n",
+        "\n",
+        "y = [0,0,1,0,1,1,0]\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=3)\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "weight = float(input(\"Enter your weight: \"))\n",
+        "height = float(input(\"Enter your height: \"))\n",
+        "\n",
+        "predicted_score = model.predict([[weight, height]])[0]\n",
+        "\n",
+        "if predicted_score == 1:\n",
+        "  print('This is likely an apple')\n",
+        "else:\n",
+        "  print('This is likely an orange')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c23284c-c538-4840-c22d-ba3441acecaf",
+        "id": "WWYneYiNn0K5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your weight: 9.25\n",
+            "Enter your height: 215\n",
+            "This is likely an orrange\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "\n",
+        "KNN : K nearest neighbour\n",
+        "based on the k nearest neighbour it will predict the value of the new input\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "X = [\n",
+        "    [180, 7],\n",
+        "    [190, 7.5],\n",
+        "    [200, 8],\n",
+        "    [210, 8.5],\n",
+        "    [220, 9],\n",
+        "    [230, 9.5],\n",
+        "    [240, 10]\n",
+        "]\n",
+        "\n",
+        "y = [0,0,1,1,1,1,0]\n",
+        "\n",
+        "model = KNeighborsClassifier(n_neighbors=3)\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "weight = float(input(\"Enter your weight: \"))\n",
+        "height = float(input(\"Enter your height: \"))\n",
+        "\n",
+        "predicted_score = model.predict([[weight, height]])[0]\n",
+        "\n",
+        "if predicted_score == 1:\n",
+        "  print('This is likely an apple')\n",
+        "else:\n",
+        "  print('This is likely an orange')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c696dec3-42e0-4040-b791-ce3b490a86b7",
+        "id": "hDtawTrgn0o9"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your weight: 225\n",
+            "Enter your height: 9.25\n",
+            "This is likely an apple\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Decision tree\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "It will predict the decision by learning the past data\n",
+        "\n",
+        "is fever > 100\n",
+        "  yes > cough?\n",
+        "    yes > flu\n",
+        "    no > maybe\n",
+        "  no - no flu\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "\n",
+        "X = [\n",
+        "    [7,2],\n",
+        "    [8,3],\n",
+        "    [9,4],\n",
+        "    [10,5]\n",
+        "]\n",
+        "\n",
+        "y = [0,0,1,1] # 0 -> apple, 1 -> orange\n",
+        "\n",
+        "model = DecisionTreeClassifier()\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "size = float(input(\"Enter your size in cm: \"))\n",
+        "shade = float(input(\"Enter your color shade[1,10]: \"))\n",
+        "\n",
+        "result = model.predict([[size, shade]])[0]\n",
+        "\n",
+        "if result == 0:\n",
+        "  print('This is likely an apple')\n",
+        "else:\n",
+        "  print('This is likely an orange')\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "Overfiiting -> the prediction will be highly focused on the training data\n",
+        "for ex: there are 3 cats with black, white and grey color and when the\n",
+        "new cat with brown color will be sent as output and model will tell the\n",
+        "given cat is not the cat.\n",
+        "\n",
+        "Underfitting -> the model is not trained well & will not find the pattern well\n",
+        "and will predict the category as wrong.\n",
+        "\n",
+        "Goodfitting -> the model is trained well and will find the patter well and\n",
+        "predicts the future input by generalizing the input data which is feed.\n",
+        "\n",
+        "'''"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nqp2PYGdpMBf",
+        "outputId": "980d6e1d-f243-475a-a3d4-19b5e1f06fb6"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your size in cm: 9.5\n",
+            "Enter your color shade[1,10]: 6\n",
+            "This is likely an orange\n"
           ]
         }
       ]
